[gd_scene load_steps=4 format=3 uid="uid://b33miyp77akwh"]

[ext_resource type="Script" uid="uid://dswlaav4a5fh8" path="res://Scenes/Menus/prestige_menu.gd" id="1_15sdu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_15sdu"]
content_margin_top = 2.0
content_margin_bottom = 2.0
bg_color = Color(1, 1, 1, 0.1882353)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_oovkt"]
bg_color = Color(0.3854925, 0.3854925, 0.38549235, 1)

[node name="PrestigeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_15sdu")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.29954746, 0.29954746, 0.29954743, 0.78431374)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Header" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/Header"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 36
text = "Prestige Tree"
vertical_alignment = 1

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PointsLabel" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 0
text = "Prestige Points: 0"
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxFlat_15sdu")

[node name="TreeContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_oovkt")

[node name="TreeContent" type="Control" parent="MarginContainer/VBoxContainer/TreeContainer"]
custom_minimum_size = Vector2(600, 500)
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 20

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Back to game"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer/Footer"]
custom_minimum_size = Vector2(180, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Main Menu"
